--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 body {
 font-family: 'Open Sans', serif;
 padding-top: 54px;
@@ -31,14 +33,17 @@ line-height: 5.5rem;
 
 h2 {
 font-size: 3.5rem;
+line-height: 3.5rem;
 }
 
 h3 {
 font-size: 2rem;
+line-height: 2rem;
 }
 
 h4 {
-font-size: 1.0rem;
+font-size: 1.5rem;
+line-height: 1.5rem;
 }
 .subheading {
 text-transform: uppercase;
