putting original images and improving page sty le

--- a/css/resume.css
+++ b/css/resume.css
@@ -1,184 +1,172 @@
-@charset "UTF-8";
-
 body {
-font-family: 'Open Sans', serif;
-padding-top: 54px;
-color: #868e96;
+    font-family: 'Open Sans', serif;
+    padding-top: 54px;
+    color: #868e96;
 }
 
 @media (min-width: 992px) {
-body {
-    padding-top: 0;
-    padding-left: 24rem;
-    padding-right: 5rem;
-}
+    body {
+        padding-top: 0;
+        padding-left: 24rem;
+        padding-right: 5rem;
+    }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-font-family: 'Saira Extra Condensed', serif;
-font-weight: 700;
-/*text-transform: uppercase;*/
-color: #343a40;
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Saira Extra Condensed', serif;
+    font-weight: 700;
+    color: #343a40;
 }
 
 h1 {
-font-size: 5.5rem;
-line-height: 5.5rem;
+    font-size: 7.0rem;
+    line-height: 8.5rem;
 }
 
 h2 {
-font-size: 3.5rem;
-line-height: 3.5rem;
+    font-size: 3.5rem;
+    line-height: 3.5rem;
 }
 
 h3 {
-font-size: 2rem;
-line-height: 2rem;
+    font-size: 2rem;
+    line-height: 2rem;
 }
 
 h4 {
-font-size: 1.5rem;
-line-height: 1.5rem;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
 }
-.subheading {
-text-transform: uppercase;
-font-weight: 500;
-font-family: 'Saira Extra Condensed', serif;
-font-size: 1.35rem;
-}
+/*.subheading {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-family: 'Saira Extra Condensed', serif;
+    font-size: 1.35rem;
+}*/
 
-.list-social-icons a {
-color: #495057;
-}
+/*.list-social-icons a {
+    color: #495057;
+}*/
 
-.list-social-icons a:hover {
-color: #BD5D38;
-}
+/*.list-social-icons a:hover {
+    color: #BD5D38;
+}*/
 
-.list-social-icons a .fa-lg {
-font-size: 1.75rem;
-}
+/*.list-social-icons a .fa-lg {
+    font-size: 1.75rem;
+}*/
 
-.list-icons {
-font-size: 3rem;
-}
+/*.list-icons {
+    font-size: 3rem;
+}*/
 
-.list-icons .list-inline-item i:hover {
-color: #BD5D38;
-}
+/*.list-icons .list-inline-item i:hover {
+    color: #BD5D38;
+}*/
 
 #sideNav .navbar-nav .nav-item .nav-link {
-font-weight: 600;
-/*text-transform: uppercase;*/
+    font-weight: 600;
+    text-decoration: none;
+    /*text-transform: uppercase;*/
 }
 
 @media (min-width: 992px) {
-#sideNav {
-    text-align: left;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    width: 21rem;
-    height: 100vh;
-}
-#sideNav .navbar-brand {
-    display: flex;
-    margin: auto auto 0;
-    padding: 0.5rem;
-}
-#sideNav .navbar-brand .img-profile {
-    max-width: 10rem;
-    max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
-}
-#sideNav .navbar-collapse {
-    display: flex;
-    align-items: flex-start;
-    flex-grow: 0;
-    width: 90%;
-    margin-bottom: auto;
-}
-#sideNav .navbar-collapse .navbar-nav {
-    flex-direction: column;
-    width: 100%;
-}
-#sideNav .navbar-collapse .navbar-nav .nav-item {
-    display: block;
-    border-bottom: 1px solid #dee2e6;
-}
-#sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
-    display: block;
-}
+    #sideNav {
+        text-align: left;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        width: 21rem;
+        height: 120vh;
+    }
+    #sideNav .navbar-brand {
+        display: flex;
+        margin: auto auto 0;
+        padding: 1.5rem;
+    }
+    #sideNav .navbar-brand .img-profile {
+        max-width: 10rem;
+        max-height: 10rem;
+        border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    }
+    #sideNav .navbar-collapse {
+        display: flex;
+        align-items: flex-start;
+        flex-grow: 0;
+        width: 95%;
+        margin-bottom: auto;
+    }
+    #sideNav .navbar-collapse .navbar-nav {
+        flex-direction: column;
+        width: 90%;
+    }
+    #sideNav .navbar-collapse .navbar-nav .nav-item {
+        display: block;
+        border-bottom: none;
+    }
+    #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
+        display: block;
+    }
 }
 
 section.resume-section {
-border-bottom: 1px solid #dee2e6;
-padding-top: 5rem !important;
-padding-bottom: 5rem !important;
+    border-bottom: 1px solid #dee2e6;
+    padding-top: 0rem !important;
+    padding-bottom: 5rem !important;
 }
 
 section.resume-section .resume-item .resume-date {
-min-width: none;
+    min-width: none;
 }
 
 @media (min-width: 768px) {
-section.resume-section {
-    min-height: 100vh;
-}
-section.resume-section .resume-item .resume-date {
-    min-width: 18rem;
-}
+    section.resume-section {
+        min-height: 100vh;
+    }
+    section.resume-section .resume-item .resume-date {
+        min-width: 18rem;
+    }
 }
 
 @media (min-width: 992px) {
-section.resume-section {
-    padding-top: 3rem !important;
-    padding-bottom: 3rem !important;
-}
+    section.resume-section {
+        padding-top: 3rem !important;
+        padding-bottom: 3rem !important;
+    }
 }
 
 .bg-primary {
-background-color: rgba(88, 10, 59, 0.822) !important;
+    background-color: rgba(0, 0, 0, 0.822) !important;
 }
 
-.text-primary {
-color: #BD5D38 !important;
-}
+/*.text-primary {
+    color: #BD5D38 !important;
+}*/
 
 a {
-color: rgb(255, 253, 253);
+    color: rgb(255, 253, 253);
 }
 
 a:hover, a:focus, a:active {
-color: #ffffff;
+    color: #b8b8b8;
 }
 
-p
-{
-text-align: justify;  
+p {
+    text-align: justify;  
 }
 
-.tabed
-{
-text-indent: 50px;
+.tabed {
+    text-indent: 50px;
 }
-
-img
-{
+img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
 }
 
-#references li
-{
+#references li {
     padding-bottom: 10px;
 }
