--- a/css/resume.css
+++ b/css/resume.css
@@ -177,3 +177,14 @@ img {
 #references li {
     padding-bottom: 10px;
 }
+figure.atlas {
+    float: right;
+    width: 22%;
+    text-align: center;
+    font-style: italic;
+    font-size: 0.2em;
+    text-indent: 0;
+    border: thin;
+    margin: none;
+    padding: 0.5em;
+  }
