--- a/css/resume.css
+++ b/css/resume.css
@@ -49,7 +49,7 @@ h4 {
         flex-direction: column;
         width: 25rem;
         height: 100vh;
-        overflow: scroll;
+        overflow-y: scroll;
     }
     #sideNav .navbar-brand {
         display: flex;
